--- a/about.html
+++ b/about.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
     <meta name="description" content="My portfolio web page made in SheCodes Responsive course">
+    <link rel="icon" href="images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ad64e497cf.js" crossorigin="anonymous"></script>
-    <meta name="description" content="About Rebeca GSP a Front End designer from Mexico, with master in UX and extense experience in UI and Front End development">
-    <title>About Front End developer - Rebeca GSP</title>
+    <meta name="description" content="About Rebeca GSP a Designer from Mexico, with a bachelor degree in Industrial Design, a master in UX and extense experience in UI and Front End development">
+    <title>About Designer - Rebeca GSP</title>
 </head>
 <body>
     <div class="container">
@@ -51,14 +52,18 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="content">
-                    <h1 class="mb-4">Hi I´m Rebeca GSP</h1>
+                    <h1 class="mb-4">Hi I am Rebeca Gonzalez Salas Pichardo</h1>
                     <h2 class="mb-4">Full Stack Creative</h2>
-                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla.</p>
+                    <p class="mb-5">Yes, I have 3 words as surnames, yes it can be confusing, so quick story: turns out my ancestor General Jose Gonzalez Salas 
+                        decided it was a good idea to keep both of his surnames for the next generations 🤷🏻‍♀️.
+                        I´m originally from Querétaro Mexico, I have an Industrial Design bachelor degree and a Web Analitics, Usability and UX Master Degree.
+                        I love dogs and bakery 🐶 🧁
+                    </p>
                     <a href="/work.html" class="btn btn-branding">View my projects</a>
                 </div>
             </div>
             <div class="col-lg-6">
-                <img src="/images/patricia.png" alt="Myself" class="img-fluid">
+                <img src="/images/myself.png" alt="Myself" class="img-fluid">
             </div>
 
         </div>
@@ -73,20 +78,20 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center mb-4">
-                <a href="mailto:myemail@gmail.com" class="email-link" title="Email Rebeca GSP">myemail@gmail.com</a>
+                <a href="mailto:rebecagsp@gmail.com" class="email-link" title="Email Rebeca GSP">rebecagsp@gmail.com</a>
             </div>
             <div class="social-links d-flex justify-content-center">
-                <a href="https://www.instagram.com/myinsta" target="_blank" title="Rebeca GSP Instagram Profile">
+                <a href="https://www.instagram.com/glez1994/" target="_blank" title="Rebeca GSP Instagram Profile">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://www.github.com/mygithub" target="_blank" title="Rebeca GSP Github Profile">
+                <a href="https://github.com/RebecaGSP" target="_blank" title="Rebeca GSP Github Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://www.facebook.com/myfacebook" target="_blank" title="Rebeca GSP Facebook Profile">
+                <a href="https://www.facebook.com/rebeca.glez.7/" target="_blank" title="Rebeca GSP Facebook Profile">
                     <i class="fab fa-facebook"></i>
                 </a>
             </div>   
-            <p class="text-center mt-4">This Web page was coded by Rebeca GSP and it´s 
+            <p class="text-center text-muted mt-4">This Web page was coded by Rebeca GSP and it´s 
                 <a href="https://github.com/RebecaGSP/my_portfolio" target="_blank" title="Github Repository of Rebeca GSP">
                     open-sourced
                 </a>
