--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <meta name="description" content="My portfolio web page made in SheCodes Responsive course">
+    <meta name="description" content="Portfolio web page of Rebeca GSP">
+    <link rel="icon" href="images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ad64e497cf.js" crossorigin="anonymous"></script>
     <meta name="description" content="I am a Front End designer from Mexico, with master in UX and extense experience in UI and Front End development">
-    <title>Front End developer - Rebeca GSP</title>
+    <title>Rebeca GSP - Mexican Designer</title>
 </head>
 <body>
     <div class="container">
@@ -21,7 +24,7 @@
                 <img src="/images/logo.png" class="logo d-none d-md-block" alt="Rebeca GSP Logo">
             </a>
             <a href="/" title="Homepage">
-                <img src="/images/smallLogo.jpeg" class="logo d-block d-md-none" alt="Rebeca GSP Logo">
+                <img src="/images/smallLogo.png" class="logo d-block d-md-none" alt="Rebeca GSP Logo">
             </a>
             <ul>
                 <li class="active">
@@ -47,61 +50,90 @@
             </ul>
         </nav>
     </div>
-    <div class="hero">
+    <div class="hero img-fluid" style="background-image: url(/images/coverImage.png); background-size: cover;">
         <p>Hello I am</p>
-        <h1>Rebeca GSP</h1>
-        <h2 class="mb-5">Mexican Front End Developer</h2>
-        <div>
-            <a href="/contact.html" class="btn btn-branding" title="Contact Rebeca GSP">Contact me</a>
-        </div>
+        <h1 style="color: var(--branding-color)">Rebeca GSP</h1>
+        <h2 class="mb-5">Mexican Designer</h2>
     </div>
     <p class="text-center m-5">Scroll down to see my areas of experience</p>
     <div class="container">
         <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="/images/yogurt.png" class="img-fluid" alt="Yogurt app preview">
+                <img src="/images/UX.png" class="img-fluid" alt="Yogurt app preview">
             </div>
             <div class="col">
                 <div class="project-description">
                     <h2 class="mb-5">
-                        Yogurt Project
+                        UX / UI
                     </h2>
                     <p class="mb-5 text-muted"> 
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. 
+                        I have a master degree in User Experience and +5 years of experience creating experiences for my clients through the process of UX to uderstand their pain points, the flows, and thoughts with existing and non existing tools.
                     </p>
-                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html#ux" class="btn btn-branding-outline">Learn more</a>
                 </div>
             </div>
         </div>
         <div class="row mb-5">
             <div class="col">
-                <div class="project-description">
+                <div class="project-description-left">
                     <h2 class="mb-5">
-                        Weather Project
+                        Corporate Design
                     </h2>
                     <p class="mb-5 text-muted"> 
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. 
                     </p>
-                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html#ui" class="btn btn-branding-outline">Learn more</a>
                 </div>
             </div>
             <div class="col d-none d-lg-block">
-                <img src="/images/weather.png" class="img-fluid" alt="Weather App preview">
+                <img src="/images/CorpDesign.png" class="img-fluid" alt="Weather App preview">
             </div>
         </div>
-        <div class="row">
+        <div class="row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="/images/dictionary.png" class="img-fluid" alt="Dictionary App preview">
+                <img src="/images/ProductDesign.png" class="img-fluid" alt="Dictionary App preview">
             </div>
             <div class="col">
                 <div class="project-description">
                     <h2 class="mb-5">
-                        Dictionary Project
+                        Product Design
                     </h2>
                     <p class="mb-5 text-muted"> 
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. 
                     </p>
-                    <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+                    <a href="/work.html#corpDesign" class="btn btn-branding-outline">Learn more</a>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-5">
+            <div class="col">
+                <div class="project-description-left">
+                    <h2 class="mb-5">
+                        Photography
+                    </h2>
+                    <p class="mb-5 text-muted"> 
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. 
+                    </p>
+                    <a href="/work.html#photography" class="btn btn-branding-outline">Learn more</a>
+                </div>
+            </div>
+            <div class="col d-none d-lg-block">
+                <img src="/images/Photography.png" class="img-fluid" alt="Weather App preview">
+            </div>
+        </div>
+        <div class="row mb-5">
+            <div class="col d-none d-lg-block">
+                <img src="/images/Baker.png" class="img-fluid" alt="Dictionary App preview">
+            </div>
+            <div class="col">
+                <div class="project-description">
+                    <h2 class="mb-5">
+                        Bakery
+                    </h2>
+                    <p class="mb-5 text-muted"> 
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cursus eget nunc scelerisque viverra mauris in aliquam sem fringilla. 
+                    </p>
+                    <a href="/work.html#corpDesign" class="btn btn-branding-outline">Learn more</a>
                 </div>
             </div>
         </div>
@@ -116,20 +148,20 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center mb-4">
-                <a href="mailto:myemail@gmail.com" class="email-link" title="Email Rebeca GSP">myemail@gmail.com</a>
+                <a href="mailto:rebecagsp@gmail.com" class="email-link" title="Email Rebeca GSP">rebecagsp@gmail.com</a>
             </div>
             <div class="social-links d-flex justify-content-center">
-                <a href="https://www.instagram.com/myinsta" target="_blank" title="Rebeca GSP Instagram Profile">
+                <a href="https://www.instagram.com/glez1994/" target="_blank" title="Rebeca GSP Instagram Profile">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://www.github.com/mygithub" target="_blank" title="Rebeca GSP Github Profile">
+                <a href="https://github.com/RebecaGSP" target="_blank" title="Rebeca GSP Github Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://www.facebook.com/myfacebook" target="_blank" title="Rebeca GSP Facebook Profile">
+                <a href="https://www.facebook.com/rebeca.glez.7/" target="_blank" title="Rebeca GSP Facebook Profile">
                     <i class="fab fa-facebook"></i>
                 </a>
             </div>   
-            <p class="text-center mt-4">This Web page was coded by Rebeca GSP and it´s 
+            <p class="text-center text-muted mt-4">This Web page was coded by Rebeca GSP and it´s 
                 <a href="https://github.com/RebecaGSP/my_portfolio" target="_blank" title="Github Repository of Rebeca GSP">
                     open-sourced
                 </a>
