--- a/work.html
+++ b/work.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
     <meta name="description" content="My portfolio web page made in SheCodes Responsive course">
+    <link rel="icon" href="images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ad64e497cf.js" crossorigin="anonymous"></script>
     <meta name="description" content="The work of Rebeca GSP a Front End designer from Mexico, with master in UX and extense experience in UI and Front End development">
@@ -49,29 +50,64 @@
     </div>
     <div class="content-container container">
         <div class="content">
-            <h1 class="mb-5">Take a look at what I've been working on!</h1>
-            <div class="row">
-                <div class="col-md-6 mb-4">
-                    <img src="/images/Work/yogurt.png" alt="Yogurt app preview" class="img-fluid mb-3 rounded">
-                    <h3 class="text-center m-0">Yogurt App</h3>
-                    <p class="text-center text-muted">This was build with HTML, CSS and JS</p>
-                </div>
-                <div class="col-md-6 mb-4">
-                    <img src="/images/Work/weather.png" alt="Weather app preview" class="img-fluid mb-3 rounded">
-                    <h3 class="text-center m-0">Weather App</h3>
-                    <p class="text-center text-muted">This was build with HTML, CSS and React</p>
+            <div id="ux">
+                <h1 class="mb-5">User eXperience / UI</h1>
+                <div class="row">
+                    <div class="col-md-6 mb-4">
+                        <img src="/images/Work/yogurt.png" alt="Yogurt app preview" class="img-fluid mb-3 rounded">
+                        <h3 class="text-center m-0">Yogurt App</h3>
+                        <p class="text-center text-muted">This was build with HTML, CSS and JS</p>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <img src="/images/Work/weather.png" alt="Weather app preview" class="img-fluid mb-3 rounded">
+                        <h3 class="text-center m-0">Weather App</h3>
+                        <p class="text-center text-muted">This was build with HTML, CSS and React</p>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6 mb-4">
-                    <img src="/images/Work/dictionary.png" alt="Dictionary app preview" class="img-fluid mb-3 rounded">
-                    <h3 class="text-center m-0">Dictionary App</h3>
-                    <p class="text-center text-muted">This was build with React</p>
+            <div id="ui">
+                <h1 class="mb-5">Corporate Design</h1>
+                <div class="row">
+                    <div class="col-md-6 mb-4">
+                        <img src="/images/Work/dictionary.png" alt="Dictionary app preview" class="img-fluid mb-3 rounded">
+                        <h3 class="text-center m-0">Dictionary App</h3>
+                        <p class="text-center text-muted">This was build with React</p>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <img src="/images/Work/translation.png" alt="Translation app preview" class="img-fluid mb-3">
+                        <h3 class="text-center m-0">Translation App</h3>
+                        <p class="text-center text-muted">This was build with React</p>
+                    </div>
                 </div>
-                <div class="col-md-6 mb-4">
-                    <img src="/images/Work/translation.png" alt="Translation app preview" class="img-fluid mb-3">
-                    <h3 class="text-center m-0">Translation App</h3>
-                    <p class="text-center text-muted">This was build with React</p>
+            </div>
+            <div id="corpDesign">
+                <h1 class="mb-5">Product Design</h1>
+                <div class="row">
+                    <div class="col-md-6 mb-4">
+                        <img src="/images/Work/dictionary.png" alt="Dictionary app preview" class="img-fluid mb-3 rounded">
+                        <h3 class="text-center m-0">Dictionary App</h3>
+                        <p class="text-center text-muted">This was build with React</p>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <img src="/images/Work/translation.png" alt="Translation app preview" class="img-fluid mb-3">
+                        <h3 class="text-center m-0">Translation App</h3>
+                        <p class="text-center text-muted">This was build with React</p>
+                    </div>
+                </div>
+            </div>
+            <div id="photography">
+                <h1 class="mb-5">Photography</h1>
+                <div class="row">
+                    <div class="col-md-6 mb-4">
+                        <img src="/images/Work/dictionary.png" alt="Dictionary app preview" class="img-fluid mb-3 rounded">
+                        <h3 class="text-center m-0">Dictionary App</h3>
+                        <p class="text-center text-muted">This was build with React</p>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <img src="/images/Work/translation.png" alt="Translation app preview" class="img-fluid mb-3">
+                        <h3 class="text-center m-0">Translation App</h3>
+                        <p class="text-center text-muted">This was build with React</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -86,20 +122,20 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center mb-4">
-                <a href="mailto:myemail@gmail.com" class="email-link" title="Email Rebeca GSP">myemail@gmail.com</a>
+                <a href="mailto:rebecagsp@gmail.com" class="email-link" title="Email Rebeca GSP">rebecagsp@gmail.com</a>
             </div>
             <div class="social-links d-flex justify-content-center">
-                <a href="https://www.instagram.com/myinsta" target="_blank" title="Rebeca GSP Instagram Profile">
+                <a href="https://www.instagram.com/glez1994/" target="_blank" title="Rebeca GSP Instagram Profile">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://www.github.com/mygithub" target="_blank" title="Rebeca GSP Github Profile">
+                <a href="https://github.com/RebecaGSP" target="_blank" title="Rebeca GSP Github Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="https://www.facebook.com/myfacebook" target="_blank" title="Rebeca GSP Facebook Profile">
+                <a href="https://www.facebook.com/rebeca.glez.7/" target="_blank" title="Rebeca GSP Facebook Profile">
                     <i class="fab fa-facebook"></i>
                 </a>
             </div>   
-            <p class="text-center mt-4">This Web page was coded by Rebeca GSP and it´s 
+            <p class="text-center text-muted mt-4">This Web page was coded by Rebeca GSP and it´s 
                 <a href="https://github.com/RebecaGSP/my_portfolio" target="_blank" title="Github Repository of Rebeca GSP">
                     open-sourced
                 </a>
